# Valuator

./: .env.example  .env.template  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt  run.bat  run.sh
.github/ISSUE_TEMPLATE/: issue-with-json-files.md
ai_agent/: README.md  __init__.py
ai_agent/agent/: __init__.py  core.py  react_agent.py
ai_agent/examples/: chat_demo.py  react_demo.py  tool_demo.py
ai_agent/models/: gemini.py
ai_agent/react/: engine.py  state.py
ai_agent/repositories/: __init__.py  base.py  file_repository.py  mongo_repository.py
ai_agent/tools/: README.md  __init__.py  react_tool.py  web_search.py  yfinance_tool.py
ai_agent/utils/: config.py  react_logger.py
client/: index.html  package-lock.json  package.json
client/src/: App.vue  main.ts
docs/: TODO.md
docs/ADR/: introduce-planning-step.md  introduce-session-manager.md  introduce-task-rewrite.md
docs/tech-specs/: domain-query-architecture.md  query-coverage-and-review-improvement.md
frontend-vue/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-vue/src/: App.vue  main.ts  vite-env.d.ts
rules/: use-venv.mdc
scripts/: run_baseline_all.sh  run_baseline_case.sh
server/: __init__.py  main.py
server/core/: README.md  (+1 more)
template/: script.js  style.css
tests/: judge.md  test_query_pipeline.py  test_semantic_requirements.py  test_tree_plan_and_aggregation.py  test_valuator_snapshot_payload.py  v1.5_testset.yaml
valuator/: __init__.py  config.py  hdps_spec.md  main.py  planning_research.md  report.py  report2.py  test.py
(+286 files in other folders)
