[tool.poetry]
name = "valuator"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.1.0"
click = "^8.1.8"
langchain-community = "^0.3.21"
langchain-openai = "^0.3.12"
pyqt5 = "5.15.10"
langchain-perplexity = "^0.1.1"
pyqt5-qt5 = "5.15.11"
yfinance = "^0.2.56"
tabulate = "^0.9.0"
markdown = "^3.8.2"
pytest = "^8.4.1"
google-cloud-firestore = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
